[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.16",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-ollama>=0.3.6",
    "langsmith>=0.4.13",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "tiktoken>=0.10.0",
]
